--- a/High-Five/pages/WellnessSports.html
+++ b/High-Five/pages/WellnessSports.html
@@ -4,8 +4,8 @@
 <head>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
   <script src="jquery.carouFredSel-6.2.1.js" type="text/javascript"></script>
-  <script src="script.js"></script>
-  <link rel="stylesheet" type="text/css" href="css.css">
+  <script src="../script/script.js"></script>
+  <link rel="stylesheet" type="text/css" href="../style/css.css">
 
   </head>
   <body>
