--- a/High-Five/pages/H5Miscellaneous.html
+++ b/High-Five/pages/H5Miscellaneous.html
@@ -73,7 +73,7 @@
     </head>
     <body>
     <div id="map">
-        <h1> Here we have other cool things you can do!</h1>
+        <h1><b> Here we have other cool things you can do!</b></h1>
         <iframe src="https://www.google.com/maps/d/embed?mid=1VhrTuOfGpQ_mrklW7qGVp0HcPMg" width="1100" height="480"></iframe>
     </div>
     <div id="footer">
