--- a/High-Five/pages/H5MuseumsZoo.html
+++ b/High-Five/pages/H5MuseumsZoo.html
@@ -74,7 +74,7 @@
 </head>
 <body>
     <div id="map">
-        <h1> Museums and a Zoo that you can enjoy!</h1>
+        <h1><b> Museums and a Zoo that you can enjoy!</b></h1>
         <iframe src="https://www.google.com/maps/d/embed?mid=1969BTQQH7t1enNmcPIQ0tDdsrvg" width="1100" height="480"></iframe>
     </div>
     <div id="footer">
