--- a/High-Five/pages/H5Parks.html
+++ b/High-Five/pages/H5Parks.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <div id="map">
-        <h1> Parks and Places that you can enjoy!</h1>
+        <h1><b> Parks and Places that you can enjoy!</b></h1>
         <iframe src="https://www.google.com/maps/d/embed?mid=1O31QAcmIFS4RDqtYVSBwRBbxOh8" width="1100" height="480"></iframe>
     </div>
     <div id="footer">
