--- a/High-Five/pages/Resturants.html
+++ b/High-Five/pages/Resturants.html
@@ -20,7 +20,7 @@
     	</div>
     </div>
     <div id="map">
-<h1>Resturants you may enjoy!!!!</h1>
+      <h1><b>Resturants you may enjoy!!!!</b></h1>
     <iframe src="https://www.google.com/maps/d/embed?mid=1b8xILj5_b52B7XFN0qRKaHJVUzs" width="1200" height="480"></iframe>
   </div>
 
