--- a/High-Five/pages/WellnessSports.html
+++ b/High-Five/pages/WellnessSports.html
@@ -20,7 +20,7 @@
     	</div>
     </div>
     <div id="map">
-<h1>Places to go watch sports and provide health/wellness!!!!!!!</h1>
+      <h1><b>Places to go watch sports and provide health/wellness!!!!!!!</b></h1>
     <iframe src="https://www.google.com/maps/d/embed?mid=1edJbL5ykbG0T60OpapMwWfZqERc" width="1200" height="480"></iframe>
   </div>
 
