--- a/High-Five/pages/Resturants.html
+++ b/High-Five/pages/Resturants.html
@@ -3,7 +3,7 @@
 
 <head>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
-  <script src="jquery.carouFredSel-6.2.1.js" type="text/javascript"></script>
+  <script src="../script/jquery.carouFredSel-6.2.1.js" type="text/javascript"></script>
   <script src="../script/script.js"></script>
   <link rel="stylesheet" type="text/css" href="../style/css.css">
 
